1999-03-17  Jochen Wiedmann  <joe@ispsoft.de> (0.1020)

	* lib/DBD/File.pm (FETCH): Simplified handling of $sth->{'NAME'}
	  due to a change in SQL::Statement 0.1011. (Teun Burgers,
	  Teun Burgers <burgers@ecn.nl>)

1999-02-11  Jochen Wiedmann  <joe@ispsoft.de> (0.1019)

	* Makefile.PL (CheckModule): Now requires Text::CSV_XS 0.16, due
	  to an imcompatible change.

1998-12-30  Jochen Wiedmann  <joe@ispsoft.de> (0.1018)

	* t/lib.pl: Fixed a bug in the test suite. (File::Spec wasn't
	  loaded)

1998-10-26  Jochen Wiedmann  <joe@ispsoft.de> (0.1017)

      * lib/DBD/CSV.pm: Fixed some examples in the docs. (Brian
        Millett, bpm@ec-group.com)
      * Now using File::Spec, if available, for Mac portability.
	(Chris Nandor, pudge@pobox.com)

1998-10-20  Jochen Wiedmann  <joe@ispsoft.de> (0.1016)

	* lib/Bundle/DBD/CSV.pm: Added lib/Bundle/DBD/CSV.pm
	* lib/DBD/File.pm: Added $dbh->table_info(). Added
	  $dbh->type_info_all(). Added $dbh->quote($str, $type).

1998-09-17  Jochen Wiedmann  <joe@ispsoft.de> (0.1015)

	* lib/DBD/CSV.pm: Fixed bug in the docs, the "undef" argument
	  was missing in conjunction with parameters,
	  Honza Pazdziora <adelton@fi.muni.cz>.
	* lib/DBD/CSV.pm: Added csv_eol, csv_sep_char, csv_quote_char
	  and csv_escape_char to DSN.

1998-08-31  Jochen Wiedmann  <joe@ispsoft.de> (0.1014)

	* Makefile.PL: Added AUTHOR, ABSTRACT_FROM and PREREQ_PM.
	* Makefile.PL: Fixed error handling by using DBI::set_err.

1998-08-17  Jochen Wiedmann  <joe@ispsoft.de> (0.1013)

	* lib/DBD/File.pm (drop): $self->{'fh'} is now closed before
	  unlinking it. This makes DROP TABLE work under Win32 and
	  other Non-Unixes.

1998-08-17  Jochen Wiedmann  <joe@ispsoft.de> (0.1012)

	* lib/DBD/File.pm (open_table): Added binmode.
	* Added Gerald Richter's modifications for DBD::ConfFile to the
	  test suite.
	* DBD-File/File.pm: Removed DBD::File::SetError and SetWarning.
	  Replaced $sth->func('get_fbav') with $sth->get_fbav() (Requires